--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:backgroundTint="@color/background"
-    tools:context=".FirstTime.FirstActivity"
-    android:weightSum="1.0">
+    android:layout_height="match_parent">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:backgroundTint="@color/background"
+        tools:context=".FirstTime.FirstActivity"
+        android:weightSum="1.0">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -82,7 +87,7 @@
                 android:id="@+id/submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_marginStart="23dp"
                 android:layout_toEndOf="@id/textinputlayout"
                 android:layout_centerVertical="true"
@@ -115,7 +120,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:id="@+id/OTP"
-                    android:inputType="phone"
+                    android:inputType="numberPassword"
                     android:layout_height="wrap_content"
                     android:textColor="#303335"
                     />
@@ -126,7 +131,7 @@
                 android:id="@+id/resend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_marginStart="23dp"
                 android:layout_toEndOf="@id/textinputlayout1"
                 android:layout_centerVertical="true"
@@ -151,3 +156,4 @@
 
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
