--- a/app/src/main/res/layout-land/activity_get_details.xml
+++ b/app/src/main/res/layout-land/activity_get_details.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans_extrabold"
-            android:text="INDIA CLOUD"
+            android:text="TCE CLOUD"
             android:textSize="40sp"
             android:textAlignment="center"
             android:textColor="@color/app_name"/>
