--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -44,6 +44,12 @@
                 android:inputType="text"
                 android:layout_height="wrap_content"
                 />
+            <ImageButton
+                android:layout_width="40dp"
+                android:background="@drawable/photo"
+                android:layout_marginRight="5dp"
+                android:id="@+id/imagecamera"
+                android:layout_height="match_parent"/>
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floating_action_button"
                 android:layout_width="wrap_content"
