--- a/app/src/main/res/layout/custom_attach_dialog.xml
+++ b/app/src/main/res/layout/custom_attach_dialog.xml
@@ -2,18 +2,52 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
-    <ImageButton
-        android:layout_width="100dp"
-        android:background="@drawable/photo"
-        android:id="@+id/cam"
-        android:layout_marginLeft="40dp"
-        android:layout_height="100dp"/>
-    <ImageButton
-        android:layout_width="100dp"
-        android:id="@+id/mic"
-        android:background="@drawable/mic"
-        android:layout_marginLeft="120dp"
-        android:layout_height="100dp"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <ImageButton
+            android:layout_width="100dp"
+            android:background="@drawable/photo"
+            android:layout_gravity="start"
+            android:layout_marginTop="40dp"
+            android:id="@+id/cam"
+            android:layout_marginLeft="50dp"
+            android:layout_height="100dp"/>
+
+        <ImageButton
+            android:layout_width="100dp"
+            android:background="@drawable/mic"
+            android:layout_gravity="end"
+            android:id="@+id/mic"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="50dp"
+            android:layout_height="100dp"/>
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Camera"
+            android:layout_gravity="start"
+            android:textStyle="bold"
+            android:layout_marginLeft="57dp"
+            android:textColor="@color/app_name"
+            android:textSize="25sp"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="MIC"
+            android:layout_gravity="end"
+            android:textColor="@color/app_name"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_marginRight="80dp"
+            android:layout_height="wrap_content"/>
+    </FrameLayout>
 </LinearLayout>
