--- a/app/src/main/res/layout/custom_dialog_select.xml
+++ b/app/src/main/res/layout/custom_dialog_select.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
     <ImageButton
         android:layout_width="100dp"
         android:background="@drawable/photo"
@@ -21,6 +25,32 @@
         android:layout_marginTop="40dp"
         android:layout_marginRight="50dp"
         android:layout_height="100dp"/>
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Camera"
+            android:layout_gravity="start"
+            android:textStyle="bold"
+            android:layout_marginLeft="57dp"
+            android:textColor="@color/app_name"
+            android:textSize="25sp"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Gallery"
+            android:layout_gravity="end"
+            android:textColor="@color/app_name"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_marginRight="60dp"
+            android:layout_height="wrap_content"/>
+    </FrameLayout>
 
 
-</FrameLayout>
+
+</LinearLayout>
