--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -39,17 +39,18 @@
                 android:hint="Chat"
                 android:textSize="20sp"
                 android:textColor="#000000"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginLeft="10dp"
                 android:inputType="text"
                 android:layout_height="wrap_content"
                 />
             <ImageButton
-                android:layout_width="40dp"
+                android:layout_width="30dp"
                 android:background="@drawable/attachment"
                 android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
                 android:id="@+id/imagecamera"
-                android:layout_height="match_parent"/>
+                android:layout_height="30dp"/>
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floating_action_button"
                 android:layout_width="wrap_content"
