--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="match_parent">
-        <FrameLayout
+        <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
             android:id="@+id/frag"
             android:layout_height="match_parent"/>
